<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vyshalis.calciapp.MainActivity"
    android:background="@color/colorAccent">

    <Button
        android:text="@string/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:layout_toEndOf="@+id/button1"
        android:id="@+id/button2" />

    <Button
        android:text="@string/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button3" />

    <Button
        android:text="@string/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="151dp"
        android:id="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:id="@+id/button4" />

    <Button
        android:text="@string/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:id="@+id/button5" />

    <Button
        android:text="@string/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:id="@+id/button7" />

    <Button
        android:text="@string/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/button8" />

    <Button
        android:text="@string/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:id="@+id/button9" />

    <Button
        android:text="@string/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_alignLeft="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:id="@+id/button0" />

    <Button
        android:text="@string/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button0"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/buttonC" />

    <Button
        android:text="@string/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_toRightOf="@+id/buttonC"
        android:layout_toEndOf="@+id/buttonC"
        android:id="@+id/buttonE" />

    <Button
        android:text="@string/buttonAddition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button0"
        android:layout_alignLeft="@+id/button0"
        android:layout_alignStart="@+id/button0"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:id="@+id/buttonA"
        android:minWidth="60dp"/>

    <Button
        android:text="@string/buttonSubtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonA"
        android:layout_toRightOf="@+id/buttonA"
        android:layout_toEndOf="@+id/buttonA"
        android:id="@+id/buttonS"
        android:minWidth="60dp"/>

    <Button
        android:text="@string/buttonMultiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonS"
        android:layout_toRightOf="@+id/buttonS"
        android:layout_toEndOf="@+id/buttonS"
        android:id="@+id/buttonM"
        android:minWidth="60dp"/>

    <Button
        android:text="@string/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonD"
        android:minWidth="60dp"
        android:layout_alignTop="@+id/buttonM"
        android:layout_toRightOf="@+id/buttonM"
        android:layout_toEndOf="@+id/buttonM" />

    <Button
        android:text="@string/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/buttonD"
        android:layout_alignEnd="@+id/buttonD"
        android:layout_marginBottom="53dp"
        android:id="@+id/editText"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColorLink="@android:color/holo_orange_dark" />

    <TextView
        android:text="Simple Calci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textColorLink="?attr/colorPrimary" />
</RelativeLayout>
